    - Removed unused GLYPH_MAP_SIZE constant from fontbase.h.
    - Header file in template moved into include directory.
    - Animation::play() stops if there are no frames to play.
    - Animation::getCurrentFrame() returns NULL if there are no frames.
    - Animation::getCurrentBitmap() returns NULL if there are no bitmaps.
  
  - New Features:
    - Added WoopsiTimer::isRunning().
    - Added SuperBitmap::setX().
    - Added SuperBitmap::setY().
    - Added SuperBitmap::getX().
    - Added SuperBitmap::getY().

  V1.2 (20110406)
  
  - Fixes:
    - Screen flipping/ordering does not occur if only one screen is visible.
    - Removed ability to set font draw colour/monochrome from font classes;
      replaced with explicit "colour" parameter to all draw methods.
    - Removed height member from FontBase and transplanted all methods to
      PackedFontBase, making FontBase data free.
    - Minor tidying in gadget.cpp.
    - Removed width and height members from BitmapBase and transplanted to
      BitmapWrapper, FrameBuffer and Bitmap.
    - Removed constructor from FontBase.
    - Gadget::checkCollision(Gadget*) will ignore collisions with hidden
      gadgets.
    - Gadget::checkCollision(Gadget*) now accepts a const Gadget*.
    - Replaced Gadget::swapGadgetDepth() with Gadget::changeGadgetDepth().
    - Rewrote Gadget::swapDepth() to be more intelligent.
    - The index to which Gadget::swapDepth() moves the gadget is now determined
      by swapDepth() instead of the parent's swapGadgetDepth() method.
    - Clicking the depth button in an AmigaWindow no longer results in graphical
      corruption.
    - Removed Screen::swapGadgetDepth().
    - Removed Woopsi::swapGadgetDepth().
    - Minor tidying and optimisations.
    - Gadget::_decorationCount is an s32 instead of a u8.
    - Fixed array index confusion in RectCache::markRectDamaged().
    - Fixed bugs in Graphics::floodFill().
    - Stack methods in Graphics class expect a reference to a stack as a